--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Real Time Offer Monitor</title>
-        <script type="text/javascript" src="app.js"></script>
-        <meta charset="UTF-8" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-    </head>
-    <body>
-    <div id="content"></div>
-    <script type="text/babel" src="app.js"></script>
+<html>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+  </head>
 
-    </body>
+  <body>
+    <div id="container"></div>
+
+    <script src="js/bundle.js"></script>
+    <script type="text/javascript">
+
+    </script>
+  </body>
 </html>
